Update schema, review methods, tests,. api-doc
